# python-profile-examples

./: MANIFEST.in  README.md  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
src/profile_examples/: prof.py  utils.py
src/profile_examples/a_deck_of_cards/: constants.py  main.py  ng_1.py  ng_2.py  ok_1.py  ok_2.py  ok_3.py  prof.py  utils.py
src/profile_examples/fibonacci_number/: constants.py  fib_binets_formula.py  fib_for_loop.py  fib_for_loop_with_acc.py  fib_recursive.py  fib_recursive_lru_cache.py  main.py  prof.py  utils.py
src/profile_examples/tarai/: constants.py  datatypes.py  main.py  tarai.py
tests/a_deck_of_cards/: ref_data.py  test_main.py  test_ng_1.py  test_ng_2.py  test_ok_1.py  test_ok_2.py
tests/fibonacci_number/: ref_data.py  test_fibs.py
tests/logs/: a_deck_of_cards_demo.txt  a_deck_of_cards_demo_3.txt  tox_profile.txt  tox_profile_1.txt  tox_profile_2.txt  tox_profile_3.txt  tox_py39_and_profile_1.txt
tests/tarai/: test_tarai.py
