# .. seealso:: https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

# .. seealso:: https://wheel.readthedocs.io/en/stable/
[bdist_wheel]
universal = 1

[aliases]
dists = clean --all sdist bdist_wheel

[metadata]
name = profile_examples
version = 0.1.0
description = Some examples to show how to profile python code
project_urls =
    Bug Tracker = https://github.com/ssato/python-profile-examples/issues
    Source = https://github.com/ssato/python-profile-examples
long_description =
    Some code examples to extend ansible-lint by adding custom rules
    implementations.

author = Satoru SATOH
author_email = ssato@redhat.com
maintainer = Satoru SATOH
maintainer_email = ssato@redhat.com
license = MIT
url = https://github.com/ssato/python-profile-examples
platforms =
    any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Environment :: Console
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

[options]
include_package_data = True
packages = find:
package_dir =
    = src

[options.packages.find]
where = src
exclude =
    tests
    tests.*

[options.entry_points]
console_scripts =
    cards = profile_examples.a_deck_of_cards.main:show_cards
    fibs = profile_examples.fibonacci_number.main:main
    tarai = profile_examples.tarai.main:main

[tool:pytest]
testpaths =
    tests

addopts = --doctest-modules --profile --profile-svg -n auto --cov=src

[flake8]
per-file-ignores =
    tests/common/__init__.py:F401
